--- a/FinalToDo/css/style.css
+++ b/FinalToDo/css/style.css
@@ -1,4 +1,5 @@
-
+/* <!--  -->code was used from Codepen.io John Baladares
+<!--  -->https://codepen.io/jaballadares/pen/Hwebq */
  .header{
  	background-color: #FF890D;
  	padding: 30px 40px;
